namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-segmentation-tool-draft-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-segmentation-tool-draft-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "segmentation-tool"
    cloud-platform.justice.gov.uk/application: "Segmentation tool draft"
    cloud-platform.justice.gov.uk/owner: "risk assessment data science: segmentation-requests@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/segmentation-tool-draft"
    cloud-platform.justice.gov.uk/team-name: "probation-ds-risk"
    cloud-platform.justice.gov.uk/review-after: ""
